--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
     background: black;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 #canvas1 {
     position: absolute;
@@ -7,6 +10,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     border: 5px solid white;
+    max-width: 100%;
 }
 #playerImage, #backgroundImage, #enemyImage {
     display: none;
