--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     transform: translate(-50%, -50%);
     border: 5px solid white;
     max-width: 100%;
+    max-height: 100%;
 }
 #playerImage, #backgroundImage, #enemyImage {
     display: none;
