--- a/style.css
+++ b/style.css
@@ -16,3 +16,11 @@ body {
 #playerImage, #backgroundImage, #enemyImage {
     display: none;
 }
+#fullscreenButton {
+    position: absolute;
+    font-size: 20px;
+    padding: 10px;
+    top: 10px;
+    left: 50%;
+    transform: translate(-50%);
+}
